<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dip">

        <LinearLayout
            android:id="@+id/staticip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/dialog_ip_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/dialog_ip_item_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ip" />

                <EditText
                    android:id="@+id/ipaddress"
                    style="@style/dialog_ip_item_edit_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="192.168.47.100"
                    android:inputType="number"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                style="@style/dialog_ip_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/dialog_ip_item_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gateway" />

                <EditText
                    android:id="@+id/gateway"
                    style="@style/dialog_ip_item_edit_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="192.168.47.1"
                    android:inputType="number"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                style="@style/dialog_ip_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/dialog_ip_item_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/netmask" />

                <EditText
                    android:id="@+id/netmask"
                    style="@style/dialog_ip_item_edit_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="255.255.255.0"
                    android:inputType="number"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                style="@style/dialog_ip_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/dialog_ip_item_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dns1" />

                <EditText
                    android:id="@+id/dns1"
                    style="@style/dialog_ip_item_edit_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="8.8.8.8"
                    android:inputType="number"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                style="@style/dialog_ip_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/dialog_ip_item_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dns2" />

                <EditText
                    android:id="@+id/dns2"
                    style="@style/dialog_ip_item_edit_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="8.8.8.8"
                    android:inputType="number"
                    android:singleLine="true" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
